# VecteurAcademy

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
.aiad/: AGENT-GUIDE.md  ALIS.md  ARCHITECTURE.md  CHANGELOG-ARTEFACTS.md  PRD.md  formationIA.md
.aiad/intents/: INTENT-001-skeleton-navigation-modulaire.md  INTENT-002-contenu-modules-quiz.md  INTENT-005-dashboard-progression-logout.md  INTENT-006-securite-pre-production.md  _index.md
.aiad/intents/archive/: INTENT-001-skeleton-navigation-modulaire.md  INTENT-002-contenu-modules-quiz.md  INTENT-003-auth-user-management.md  INTENT-004-instructor-avatar.md  INTENT-005-dashboard-progression-logout.md
.aiad/specs/: SPEC-002-module-registry.md  SPEC-003-navigation-shell.md  SPEC-004-auth-shell.md  SPEC-006-quiz-module-component.md  SPEC-007-quiz-parcours-final.md  SPEC-008-db-schema-user-progression.md  SPEC-009-auth-credentials-provider.md  SPEC-010-route-protection-progression.md  SPEC-013-dashboard-progression.md  SPEC-014-jwt-auth-api.md  _index.md
.aiad/specs/archive/: SPEC-001-monorepo-bootstrap.md  SPEC-002-module-registry.md  SPEC-003-navigation-shell.md  SPEC-004-auth-shell.md  SPEC-005-mdx-content-rendering.md  SPEC-011-instructor-badge.md  (+5 more)
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  db.py  deps.py  main.py  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_user_schema.py  0002_add_first_last_name_to_users.py
apps/api/models/: __init__.py  user.py
apps/api/routers/: auth.py  progress.py
apps/api/schemas/: __init__.py  progress.py  user.py
apps/api/services/: auth_service.py  progress_service.py
apps/api/tests/: test_auth.py  test_models.py  test_progress.py
apps/web/: auth.ts  middleware.ts  package.json  playwright.config.ts  vitest.config.ts
(+46 files in other folders)
